--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "api-change-run",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Execute command on API change",
   "main": "dist/public-api.mjs",
   "types": "dist/public-api.d.mts",
@@ -29,6 +29,9 @@
   "devDependencies": {
     "@types/jest": "^29.2.1",
     "@types/node": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.42.0",
+    "@typescript-eslint/parser": "^5.42.0",
+    "eslint": "^8.26.0",
     "jest": "^29.2.2",
     "ts-jest": "^29.0.3",
     "type-fest": "^3.1.0",
