--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "api-change-run",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Execute command on API change",
   "main": "dist/public-api.mjs",
   "types": "dist/public-api.d.mts",
@@ -45,5 +45,6 @@
   ],
   "bin": {
     "api-change-poll": "dist/poll-url-change.cli.mjs"
-  }
+  },
+  "packageManager": "yarn@3.2.4"
 }
