--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -34,6 +34,7 @@ jobs:
 
   publish-npm:
     needs: build
+    environment: production
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -41,9 +42,13 @@ jobs:
         with:
           node-version: 18
           registry-url: https://registry.npmjs.org/
+      - name: Set env
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
       - uses: actions/download-artifact@v2
         with:
           name: dist
+      - name: Set new version
+        run: yarn version ${{ env.RELEASE_VERSION }}
       - run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{secrets.ACCESS_TOKEN}}
+          NODE_AUTH_TOKEN: ${{ secrets.ACCESS_TOKEN }}
