--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "dist/"
   ],
   "bin": {
-    "api-change-poll": "dist/poll-url-change.cli.mjs"
+    "api-change-poll": "dist/poll-url-change.cli.mjs",
+    "api-change-run": "dist/poll-url-change.cli.mjs"
   },
-  "packageManager": "yarn@3.2.4"
+  "packageManager": "yarn@3.3.0"
 }
