--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "test": "jest",
-    "tt": "node -e \"console.log('ok')\""
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -44,6 +43,9 @@
   "files": [
     "dist/"
   ],
-  "bin": "./dist/poll-url-change.cli.mjs",
+  "bin": {
+    "api-change-poll": "./dist/poll-url-change.cli.mjs",
+    "api-change-run": "./dist/poll-url-change.cli.mjs"
+  },
   "packageManager": "yarn@3.3.0"
 }
