--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "yarn dlx @yarnpkg/sdks vscode"
   },
   "repository": {
     "type": "git",
@@ -21,24 +22,24 @@
   },
   "homepage": "https://github.com/kpanot/api-change-run#readme",
   "dependencies": {
-    "commander": "^9.4.1",
-    "loglevel": "^1.8.0",
-    "node-fetch": "^3.2.10",
-    "rxjs": "^7.5.7"
+    "commander": "^11.0.0",
+    "loglevel": "^1.8.1",
+    "node-fetch": "^3.3.2",
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "@types/jest": "^29.2.1",
-    "@types/node": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.42.0",
-    "@typescript-eslint/parser": "^5.42.0",
-    "eslint": "^8.26.0",
-    "jest": "^29.2.2",
-    "ts-jest": "^29.0.3",
-    "type-fest": "^3.1.0",
-    "typescript": "^4.8.4"
+    "@types/jest": "^29.5.4",
+    "@types/node": "^20.5.9",
+    "@typescript-eslint/eslint-plugin": "^6.5.0",
+    "@typescript-eslint/parser": "^6.5.0",
+    "eslint": "^8.48.0",
+    "jest": "^29.6.4",
+    "ts-jest": "^29.1.1",
+    "type-fest": "^4.3.1",
+    "typescript": "^5.2.2"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=10.0.0"
   },
   "files": [
     "dist/"
@@ -47,5 +48,5 @@
     "api-change-poll": "./dist/poll-url-change.cli.mjs",
     "api-change-run": "./dist/poll-url-change.cli.mjs"
   },
-  "packageManager": "yarn@3.3.0"
+  "packageManager": "yarn@3.6.3"
 }
